--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -2,25 +2,21 @@
   <h5 *ngIf="uj">Új {{penztarservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{penztarservice.cim}} módosítása</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
       <div class="editform-label">Pénztár</div>
-      <input type="text" class="editform-edit em15width" id="penztar"
-             maxlength="200" required autocomplete="off"
-             [(ngModel)]="DtoEdited.Penztar1" name="penztar">
+      <input type="text" class="editform-edit em15width" formControlName="penztar">
     </div>
 
     <div class="editform-row">
       <div class="editform-label">Pénznem</div>
-      <input type="text" class="editform-edit zoomedit penznemwidth" id="penznem"
-             maxlength="100" required autocomplete="off"
-             [(ngModel)]="DtoEdited.Penznem" name="penznem">
+      <input type="text" class="editform-edit zoomedit penznemwidth" formControlName="penznem">
       <button class="toolbutton" type="button" (click)="PenznemZoom()">...</button>
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
