--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -52,12 +52,12 @@
 
       <div class="editform-row">
         <div class="editform-label">Termékdíj megnevezés</div>
-        <input type="text" class="editform-edit em15width" formControlName="termekdijmegnevezes" disabled>
+        <input type="text" class="editform-edit em15width" formControlName="termekdijmegnevezes">
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Termékdíj egységár</div>
-        <input type="number" class="editform-number" formControlName="termekdijegysegar" disabled>
+        <input type="number" class="editform-number" formControlName="termekdijegysegar">
       </div>
     </div>
 
