--- a/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -13,7 +13,7 @@
 
       <div class="editform-row">
         <div class="editform-label">Cím</div>
-        <input type="text" class="editform-edit cimwidth" formControlName="ugyfelcim" disabled>
+        <input type="text" class="editform-edit cimwidth" formControlName="ugyfelcim">
       </div>
 
       <div class="editform-row">
