--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -1,49 +1,42 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Új vagy felülírás</h5>
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
     <div class="editform-row">
         <div class="editform-label">Fuvarszámla</div>
-        <input type="text" class="editform-edit zoomedit em10width" id="bizonylatszam"
-               maxlength="100" required autocomplete="off"
-               [(ngModel)]="dtoFuvarszamla.Bizonylatszam" name="bizonylatszam">
+        <input type="text" class="editform-edit zoomedit em15width" formControlName="bizonylatszam">
         <button class="toolbutton" type="button" (click)="BizonylatZoom()">...</button>
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Fuvardíj</div>
-        <input type="number" class="editform-number" id="fuvardij"
-               maxlength="20" required autocomplete="off"
-               [(ngModel)]="Fuvardij" name="fuvardij">
+        <input type="number" class="editform-number" formControlName="fuvardij">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Fuvardíj pénzneme</div>
-        <input type="text" class="editform-edit penznemwidth" id="fuvardijpenzneme"
-               maxlength="20" required autocomplete="off" disabled="true"
-               [(ngModel)]="dtoFuvarszamla.Penznem" name="fuvardijpenzneme">
+        <input type="text" class="editform-edit penznemwidth" formControlName="fuvardijpenzneme">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Fuvardíj árfolyama</div>
-        <input type="number" class="editform-number" id="fuvardijarfolyama"
-               maxlength="20" required autocomplete="off" disabled="true"
-               [(ngModel)]="dtoFuvarszamla.Arfolyam" name="fuvardijarfolyama">
+        <input type="number" class="editform-number" formControlName="fuvardijarfolyama">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="doCancel()">Mégsem</button>
     </div>
   </form>
 
   <div id="fuvarszamlazoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <ng-container *ngIf="SzerkesztesMode === 1">
-      <div class="zoom-modal-content">
+    <div class="zoom-modal-content">
+      <ng-container *ngIf="SzerkesztesMode === 1">
         <app-bizonylat-zoom [maszk]="dtoFuvarszamla.Bizonylatszam"
                             (eventStopzoom)="eventStopZoom()"
                             (eventSelectzoom)="eventSelectzoom($event)">
         </app-bizonylat-zoom>
-      </div>
-    </ng-container>
+      </ng-container>
+    </div>
   </div>
 </div>
