--- a/src/app/bizonylat/bizonylat-zoom/bizonylat-zoom.component.html
+++ b/src/app/bizonylat/bizonylat-zoom/bizonylat-zoom.component.html
@@ -1,12 +1,12 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Bejövő számlák - zoom</h5>
   <div class="toolbar">
-    <input #Minta type="text" class="tooledit em6width">
+    <input #Minta type="text" class="tooledit">
 
     <button (click)="doKereses()" class="toolbutton" type="button">
       <i class="fa fa-search" aria-hidden="true"></i>
     </button>
-    <button (click)="doStopZoom()" class="toolbutton" type="button">
+    <button (click)="onStopZoom()" class="toolbutton" type="button">
       <i class="fa fa-close" aria-hidden="true"></i>
     </button>
   </div>
@@ -14,7 +14,7 @@
   <table>
     <thead>
     <tr>
-      <th style="width: 20px"></th>
+      <th></th>
       <th style="width: 130px">
         <div>Id</div>
         <div>Sorszám</div>
@@ -43,7 +43,7 @@
     <tbody>
       <ng-container *ngFor="let item of items; let i = index">
         <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-          <td class="itemID" (click)="clickforzoom(i)">
+          <td class="itemIcon" (click)="onStartzoom(i)">
             <i class="fa fa-check" aria-hidden="true"></i>
           </td>
 
