--- a/src/app/fotozas/fotozas/fotozas.component.html
+++ b/src/app/fotozas/fotozas/fotozas.component.html
@@ -1,60 +1,66 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Fotózás</h5>
 
-  <img src="assets/ossspa/gsg.jpg" style="margin-top: 8px;margin-bottom: 8px" alt="GSG">
+  <div class="editform-row">
+    <img src="assets/ossspa/gsg.jpg" style="margin-top: 8px;margin-bottom: 8px" alt="GSG">
+  </div>
 
   <ng-container *ngIf="!bejelentkezve">
-    <p>Üdvözöljük, ön a GridSolar Group Kft. informatikai rendszerét (OSS) használja. Kérjük a fotózáshoz kapott linket kezelje bizalmasan!</p>
-    <button (click)="folytatas()" class="toolbutton">
-      Folytatás
-    </button>
+    <p>Üdvözöljük, ön a GridSolar Group Kft. informatikai rendszerét (OSS) használja.<br>Kis türelmet...</p>
   </ng-container>
 
   <ng-container *ngIf="bejelentkezve">
-    <div class="editform-label">Ügyfél</div>
-    <div>{{Dto.iratDto[0].Ugyfelnev}}</div>
-    <div>{{Dto.iratDto[0].Ugyfelcim}}</div>
-    <div><b>{{Dto.iratDto[0].Targy}}</b></div>
-    <ng-container *ngIf="Dto.projektDto !== undefined">
-      <br>
-      <div class="editform-label">Telepítési cím</div>
-      <div><b>{{Dto.projektDto[0].Telepitesicim}}</b></div>
+    <div class="editform-row">
+      <div class="editform-label">Ügyfél</div>
+      <div>{{Dto.iratDto[0].Ugyfelnev}}</div>
+      <div>{{Dto.iratDto[0].Ugyfelcim}}</div>
+      <div><b>{{Dto.iratDto[0].Targy}}</b></div>
+    </div>
+
+    <ng-container *ngIf="Dto.projektDto !== undefined && Dto.projektDto !== null">
+      <div class="editform-row">
+        <div class="editform-label">Telepítési cím</div>
+        <div><b>{{Dto.projektDto[0].Telepitesicim}}</b></div>
+      </div>
     </ng-container>
-    <table>
-      <thead>
-      </thead>
-      <tbody>
-      <tr *ngFor="let item of Dto.dokumentumDto">
-        <td>
-          <div style="height: 15px"></div>
-          <div>
-            {{item.Megjegyzes}}
-          </div>
-          <div style="height: 5px"></div>
-          <div *ngIf="item.Imgprev !== null">
-            <img [src] = "'data:image/jpg;base64,' + item.Imgprev"/>
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+
+    <div class="editform-row">
+      <table>
+        <thead>
+        </thead>
+        <tbody>
+        <tr *ngFor="let item of Dto.dokumentumDto">
+          <td style="border: none; padding: 0">
+            <div style="height: 15px"></div>
+            <div>
+              {{item.Megjegyzes}}
+            </div>
+            <div style="height: 5px"></div>
+            <div *ngIf="item.Imgprev !== null">
+              <img [src] = "'data:image/jpg;base64,' + item.Imgprev"/>
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
 
     <div style="height: 15px"></div>
 
-    <form #f="ngForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
       <div class="editform-row">
-        <div>
-          <input type="file" (change)="onFileChange($event)" #fileInput>
-        </div>
+        <div class="editform-label">Fájl</div>
+        <input type="text" class="editform-edit" formControlName="fajlnev">
+        <label class="toolbutton">...
+          <input type="file" (change)="onFileChange($event)">
+        </label>
       </div>
 
       <div class="editform-row">
         <div>
           <div class="editform-label">Megjegyzés</div>
-          <input type="text" list="ssz" class="editform-combo" id="megjegyzes"
-                 autocomplete="off" required
-                 [(ngModel)]="megjegyzes" name="megjegyzes">
+          <input type="text" list="ssz" class="editform-combo em15width" formControlName="megjegyzes">
           <datalist id="ssz">
             <option value="Kész tető">
             <option value="Kész inverter és környéke">
@@ -68,7 +74,7 @@
       </div>
 
       <div class="editform-row-bottom">
-        <button class="toolbutton okbutton" [disabled]="!f.valid || file === undefined" type="submit">Ok</button>
+        <button class="toolbutton okbutton" [disabled]="fb === undefined || form.invalid" type="submit">Ok</button>
       </div>
     </form>
   </ng-container>
