--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-menu></app-menu>
+<app-navbar></app-navbar>
 
 <div style="margin-left: 1em;margin-right: 1em;width: auto;">
   <router-outlet></router-outlet>
