--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,34 @@
+.sidebar {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 99999; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.sidebar-content {
+  left: 0;
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 20em;
+  height: 100%;
+}
+
+.sidebar-menu {
+  list-style-type: none;
+}
+.sidebar-menuitem {
+  list-style-type: none;
+  margin-left: 3em;
+}
+
+
 /* Basic styling */
 * {
   box-sizing: border-box;
@@ -11,6 +42,7 @@
 nav {
   background: #222;
   padding: 0 15px;
+margin-bottom: 1em;
 }
 a {
   color: white;
@@ -21,8 +53,10 @@ a {
   list-style-type: none;
 }
 .logo {
-  font-size: 20px;
   padding: 7.5px 10px 7.5px 0;
+  color: white;
+  font-family: inherit;
+  font-size: 100%;
 }
 .item {
   padding: 10px;
