--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
   --kivalasztottszin: #d0e0df;
   --kontrolszin: #5d8dea;
   --zoomszin: rgba(149, 253, 189, 0.67);
+  --navbarszin: #4e555b;
 }
 
 html, body {
