--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,25 +1,35 @@
-<nav>
-  <div class="logo"><a (click)="opensidebar()">{{verzioesbuild}}</a></div>
-</nav>
+<div class="navbar">
+  <a style="cursor: pointer" (click)="opensidebar()">{{verzioesbuild}}</a>
+</div>
 
 <div id="sidebar" class="sidebar" role="dialog"  data-backdrop="true" data-keyboard="false">
   <div class="sidebar-content">
-    <ng-container *ngIf="szerepkorkivalasztva">
+    <div style="margin-bottom: 1em">
+      <a style="cursor: pointer" (click)="closesidebar()"><i class="fa fa-close" aria-hidden="true"></i></a>
+    </div>
+    <div>
       <ul>
         <li class="sidebar-menu" *ngFor="let node of angularmenudto;let i = index">
           <a (click)="setselected(i)">{{node.Title}}</a>
 
           <ng-container *ngIf="i === selected">
+            <div style="margin-bottom: 0.5em"></div>
             <ul>
               <li class="sidebar-menuitem" *ngFor="let item of node.Sub">
                 <a *ngIf="item.Title !== 'divider' && item.Enabled" (click)="menuclick(item.RouterLink)">
                   {{item.Title}}
                 </a>
+                <a *ngIf="item.Title !== 'divider' && !item.Enabled"
+                   style="color: silver;cursor: not-allowed">
+                  {{item.Title}}
+                </a>
+                <div class="sidebar-divider" *ngIf="item.Title === 'divider'">
+                </div>
               </li>
             </ul>
           </ng-container>
         </li>
       </ul>
-    </ng-container>
+    </div>
   </div>
 </div>
