--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -30,7 +30,7 @@
   </form>
 
   <div id="fuvarszamlazoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <div class="zoom-modal-content">
+    <div class="zoom-modal-content-complex">
       <ng-container *ngIf="SzerkesztesMode === 1">
         <app-bizonylat-zoom [maszk]="dtoFuvarszamla.Bizonylatszam"
                             (eventStopzoom)="eventStopZoom()"
