--- a/src/app/tools/errorbox/errorbox.component.html
+++ b/src/app/tools/errorbox/errorbox.component.html
@@ -1,5 +1,5 @@
-<div id="errorbox" class="modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-  <div class="modal-content">
+<div id="errorbox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
+  <div class="zoom-modal-content-error">
     <h5>Hiba</h5>
 
     <div class="editform-row">
