--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --hatterszin: white;
   --szovegszin: black;
@@ -5,44 +6,76 @@
   --kivalasztottszin: #d0e0df;
   --kontrolszin: #5d8dea;
   --zoomszin: rgba(149, 253, 189, 0.67);
-  --navbarszin: #4e555b;
-}
+  --navbarszin: #4e555b; }
 
+.zoom-modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 99999;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */ }
 
+.zoom-modal-content-complex, .zoom-modal-content-primitive, .zoom-modal-content-error {
+  background-color: white;
+  margin: 5% auto;
+  /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888; }
+
+.zoom-modal-content-complex {
+  width: 80%; }
+
+.zoom-modal-content-primitive {
+  width: 30%; }
+
+.zoom-modal-content-error {
+  width: 50%; }
 
 html, body {
   font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
   font-size: 14px;
-  font-weight: 300;
-}
+  font-weight: 300; }
+
 button, input, select, textarea {
   font-family: inherit;
-  font-size: 100%;
-}
+  font-size: 100%; }
+
 h5 {
   font-family: inherit;
   font-size: 140%;
   font-weight: 500;
   padding: 0;
   margin: 0;
-  margin-bottom: 0.25em;
-}
+  margin-bottom: 0.25em; }
+
 table, th, td {
   border: 1px solid var(--keretszin);
   font-weight: normal;
   font-style: normal;
   padding: 6px;
-  border-collapse: collapse;
-}
+  border-collapse: collapse; }
+
 table tr.active td {
-  background-color: var(--kivalasztottszin);
-}
+  background-color: var(--kivalasztottszin); }
+
 table tr.inactive td {
-  background-color: var(--hatterszin);
-}
+  background-color: white; }
+
 input[type="file"] {
-  display: none;
-}
+  display: none; }
 
 .itemID {
   text-align: right;
@@ -51,52 +84,47 @@ input[type="file"] {
   cursor: pointer;
   width: 4em;
   padding-left: 0.5em;
-  padding-right: 0.5em
-}
+  padding-right: 0.5em; }
+
 .itemIcon {
   text-align: right;
   color: var(--kontrolszin);
   cursor: pointer;
   width: 1em;
   padding-left: 0.5em;
-  padding-right: 0.5em
-}
-
+  padding-right: 0.5em; }
 
 .alapkeret {
   overflow: auto;
-  background-color: var(--hatterszin);
+  background-color: white;
   border: 1px solid var(--keretszin);
-  padding: 0.5em;
-}
+  padding: 0.5em; }
 
 .editform-card {
   float: left;
-  margin-right: 1em;
-}
+  margin-right: 1em; }
+
 .editform-row {
   margin-left: 1em;
-  margin-bottom: 0.7em;
-}
+  margin-bottom: 0.7em; }
+
 .editform-row-block {
   display: inline-block;
-  margin-right: 0.5em
-}
+  margin-right: 0.5em; }
+
 .editform-row-bottom {
   margin-top: 1em;
   margin-left: 1em;
   margin-bottom: 0.5em;
-
-  clear: both;
-}
+  clear: both; }
 
 .editform-label {
   text-align: left;
   font-style: italic;
   font-family: inherit;
   font-size: 90%;
-  margin-bottom: 0.1em;
-}
+  margin-bottom: 0.1em; }
+
 .editform-edit {
   outline: 0;
   border: 1px solid var(--kontrolszin);
@@ -106,49 +134,46 @@ input[type="file"] {
   font-family: inherit;
   height: calc(1.5em);
   padding: 0.25rem 0.25rem;
-  font-size: 0.875rem;
-}
-.editform-edit:disabled {
-  background-color: var(--keretszin);
-}
-.zoomedit {
-  background-color: var(--zoomszin);
-}
+  font-size: 0.875rem; }
 
+.editform-edit:disabled {
+  background-color: var(--keretszin); }
+
+.zoomedit {
+  background-color: var(--zoomszin); }
 
 .datum {
-  width: 5em;
-}
+  width: 5em; }
+
 .idobelyeg {
-  width: 9em;
-}
+  width: 9em; }
+
 .penznemwidth {
-  width: 3em;
-}
+  width: 3em; }
+
 .ugyfelwidth {
-  width: 20em;
-}
+  width: 20em; }
+
 .cimwidth {
-  width: 30em;
-}
+  width: 30em; }
+
 .megjegyzeswidth {
-  width: 50em;
-}
+  width: 50em; }
+
 .primitivwidth {
-  width: 15em;
-}
+  width: 15em; }
+
 .kisprimitivwidth {
-  width: 8em;
-}
+  width: 8em; }
+
 .cikkwidth {
-  width: 30em;
-}
+  width: 30em; }
+
 .passwordwidth {
-  width: 10em;
-}
+  width: 10em; }
+
 .emailwidth {
-  width: 15em;
-}
+  width: 15em; }
 
 .editform-combo {
   outline: 0;
@@ -159,11 +184,11 @@ input[type="file"] {
   font-family: inherit;
   height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.25rem;
-  font-size: 0.875rem;
-}
+  font-size: 0.875rem; }
+
 .editform-combo:disabled {
-  background-color: var(--keretszin);
-}
+  background-color: var(--keretszin); }
+
 .editform-date {
   outline: 0;
   border: 1px solid var(--kontrolszin);
@@ -174,12 +199,11 @@ input[type="file"] {
   height: calc(1.5em);
   padding: 0.25rem 0.25rem;
   font-size: 0.875rem;
-  width: 10em;
+  width: 10em; }
 
-}
 .editform-date:disabled {
-  background-color: var(--keretszin);
-}
+  background-color: var(--keretszin); }
+
 .editform-number {
   outline: 0;
   border: 1px solid var(--kontrolszin);
@@ -191,132 +215,112 @@ input[type="file"] {
   padding: 0.25rem 0.25rem;
   font-size: 0.875rem;
   width: 8em;
-  text-align: right;
-}
+  text-align: right; }
+
 .editform-number:disabled {
-  background-color: var(--keretszin);
-}
+  background-color: var(--keretszin); }
+
 /*.ng-valid:not(form) {*/
 /*border-left: 0.3em solid #56ac96;*/
 /*}*/
 .ng-invalid:not(form) {
-  border-left: 0.3em solid lightpink;
-}
+  border-left: 0.3em solid lightpink; }
 
 .em4width {
-  width: 4em;
-}
+  width: 4em; }
+
 .em6width {
-  width: 6em;
-}
+  width: 6em; }
+
 .em8width {
-  width: 8em;
-}
+  width: 8em; }
+
 .em10width {
-  width: 10em;
-}
+  width: 10em; }
+
 .em15width {
-  width: 15em;
-}
+  width: 15em; }
+
 .em20width {
-  width: 20em;
-}
-
-
+  width: 20em; }
 
 .toolbar {
   margin-top: 0.25em;
-  margin-bottom: 0.25em;
-}
+  margin-bottom: 0.25em; }
 
 .toolbutton {
   cursor: pointer;
   border: 1px solid var(--kontrolszin);
   border-radius: 0.2em;
-  background-color: var(--hatterszin);
+  background-color: white;
   color: var(--kontrolszin);
   margin-right: 0.3em;
   margin-bottom: 0.3em;
   font-family: inherit;
   height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
-}
+  font-size: 0.875rem; }
+
 .toolbutton:disabled {
   background-color: var(--keretszin);
-  cursor: not-allowed;
-}
+  cursor: not-allowed; }
+
 .toolbutton:focus {
   outline: none;
-  box-shadow: 0 0 0 2px var(--kontrolszin);
-}
+  box-shadow: 0 0 0 2px var(--kontrolszin); }
+
 .toolbutton:hover {
   background-color: var(--kontrolszin);
-  color: var(--hatterszin);
-}
+  color: white; }
 
 .okbutton {
   background-color: var(--kontrolszin);
-  color: var(--hatterszin);
-}
+  color: white; }
 
 .tooledit {
   outline: 0;
-  background-color: var(--hatterszin);
+  background-color: white;
   border: 1px solid var(--kontrolszin);
   border-radius: 0.2em;
   margin-right: 0.2em;
   font-family: inherit;
   height: calc(1.5em);
   padding: 0.25rem 0.25rem;
-  font-size: 0.875rem;
-}
+  font-size: 0.875rem; }
+
 .toolcombo {
   outline: 0;
-  background-color: var(--hatterszin);
+  background-color: white;
   border: 1px solid var(--kontrolszin);
   border-radius: 0.2em;
   margin-right: 0.2em;
   font-family: inherit;
   height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.25rem;
-  font-size: 0.875rem;
-}
-
-
-
-
-
+  font-size: 0.875rem; }
 
 /*Waiter*/
-
 @keyframes waiteranim {
   from {
     transform: translateY(-3rem);
-    opacity: 0;
-  }
+    opacity: 0; }
   to {
     transform: translateY(0);
-    opacity: 1;
-  }
-}
+    opacity: 1; } }
 
 .waiteranimation {
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
   animation-name: waiteranim;
-  animation-duration: 1s;
-}
+  animation-duration: 1s; }
 
 .waitercss {
   color: black;
   font-weight: bold;
-  z-index: 1200 !important;
-}
+  z-index: 1200 !important; }
 
 /*---Waiter váge*/
-
 /*Spinner direktívához*/
 .loading {
   position: fixed;
@@ -328,16 +332,16 @@ input[type="file"] {
   right: 0;
   bottom: 0;
   z-index: 2000000;
-  cursor: pointer;
-}
+  cursor: pointer; }
+
 .loader {
   left: 50%;
   margin-left: -4em;
   font-size: 10px;
-  border: .8em solid rgba(218, 219, 223, 1);
-  border-left: .8em solid rgba(58, 166, 165, 1);
-  animation: spin 0.8s infinite linear;
-}
+  border: 0.8em solid #dadbdf;
+  border-left: 0.8em solid #3aa6a5;
+  animation: spin 0.8s infinite linear; }
+
 .loader, .loader:after {
   border-radius: 50%;
   width: 8em;
@@ -345,45 +349,12 @@ input[type="file"] {
   display: block;
   position: fixed;
   top: 50%;
-  margin-top: -4.05em;
-}
+  margin-top: -4.05em; }
+
 @keyframes spin {
   0% {
-    transform: rotate(360deg);
-  }
+    transform: rotate(360deg); }
   100% {
-    transform: rotate(0deg);
-  }
-}
+    transform: rotate(0deg); } }
+
 /*Spinner direktívához vége*/
-
-
-
-
-
-.zoom-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 99999; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-%zoom-modal-content-base {
-  background-color: #fefefe;
-  margin: 5% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-}
-.zoom-modal-content-complex {
-  @extend %zoom-modal-content-base;
-  width: 80%;
-}
-.zoom-modal-content-primitive {
-  @extend %zoom-modal-content-base;
-  width: 30%;
-}
