--- a/src/app/bizonylat/bizonylat-zoom/bizonylat-zoom.component.html
+++ b/src/app/bizonylat/bizonylat-zoom/bizonylat-zoom.component.html
@@ -43,7 +43,7 @@
     <tbody>
       <ng-container *ngFor="let item of items; let i = index">
         <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-          <td class="itemIcon" (click)="onStartzoom(i)">
+          <td class="tabla-kontrol-icon" (click)="onStartzoom(i)">
             <i class="fa fa-check" aria-hidden="true"></i>
           </td>
 
