--- a/src/app/bizonylat/bizonylatafatabla/bizonylatafatabla.component.html
+++ b/src/app/bizonylat/bizonylatafatabla/bizonylatafatabla.component.html
@@ -11,7 +11,7 @@
   <tbody>
   <ng-container *ngFor="let item of Dto; let i = index">
     <tr [className]="false ? 'active' : 'inactive'">
-      <td *ngIf="enIdclick" class="itemID" (click)="setClickedRow(i)">{{item.Bizonylatafakod}}</td>
+      <td *ngIf="enIdclick" class="tabla-kontrol-id" (click)="setClickedRow(i)">{{item.Bizonylatafakod}}</td>
       <td *ngIf="!enIdclick">{{item.Bizonylatafakod}}</td>
       <td style="text-align: right">{{item.Afamerteke | number: '1.2-2'}}</td>
       <td style="text-align: right">{{item.Netto | number: '1.2-2'}}</td>
