--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -14,7 +14,7 @@
       </thead>
       <tbody>
       <tr *ngFor="let item of penztarDto; let i = index" class="inactive">
-        <td class="itemID" (click)="penztarvalasztas(i)">{{item.Penztarkod}}</td>
+        <td class="tabla-kontrol-id" (click)="penztarvalasztas(i)">{{item.Penztarkod}}</td>
         <td>{{item.Penztar1}}</td>
         <td>{{item.Penznem}}</td>
         <td>{{item.Egyenleg}}</td>
