--- a/src/app/projekt/projekttabla/projekt-tabla.component.html
+++ b/src/app/projekt/projekttabla/projekt-tabla.component.html
@@ -32,7 +32,7 @@
 
     <ng-container *ngFor="let item of Dto; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-        <td *ngIf="enIdclick" class="itemID" (click)="clickforid(i)">{{item.Projektkod}}</td>
+        <td *ngIf="enIdclick" class="tabla-kontrol-id" (click)="clickforid(i)">{{item.Projektkod}}</td>
         <td *ngIf="!enIdclick">{{item.Projektkod}}</td>
         <td>{{item.Statusz}}</td>
         <td>
