--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -13,6 +13,7 @@
 @import 'szinek';
 @import 'modal';
 @import 'tabla';
+@import 'spinner';
 
 html, body {
   font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
@@ -264,74 +265,7 @@ input[type="file"] {
 
 
 
-/*Waiter*/
 
-@keyframes waiteranim {
-  from {
-    transform: translateY(-3rem);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.waiteranimation {
-  margin-top: 0;
-  margin-left: auto;
-  margin-right: auto;
-  animation-name: waiteranim;
-  animation-duration: 1s;
-}
-
-.waitercss {
-  color: black;
-  font-weight: bold;
-  z-index: 1200 !important;
-}
-
-/*---Waiter váge*/
-
-/*Spinner direktívához*/
-.loading {
-  position: fixed;
-  /*display: block;*/
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2000000;
-  cursor: pointer;
-}
-.loader {
-  left: 50%;
-  margin-left: -4em;
-  font-size: 10px;
-  border: .8em solid rgba(218, 219, 223, 1);
-  border-left: .8em solid rgba(58, 166, 165, 1);
-  animation: spin 0.8s infinite linear;
-}
-.loader, .loader:after {
-  border-radius: 50%;
-  width: 8em;
-  height: 8em;
-  display: block;
-  position: fixed;
-  top: 50%;
-  margin-top: -4.05em;
-}
-@keyframes spin {
-  0% {
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-/*Spinner direktívához vége*/
 
 
 
